[droplets] ➕ Add  droplets/  to project
Added the  droplets/  submodule to the repo. I'm not too sure if I did this fully correctly but I certainly do hope I did. I have updated the repo and have fixed some of the broken elements in it. It isn't perfect but hopefully it will do.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "portfolio"]
 	path = portfolio
 	url = https://github.com/d-a-s-h-o/d-a-s-h-o.git
+[submodule "droplets"]
+	path = droplets
+	url = https://github.com/d-a-s-h-o/droplets
